cluster/apps/default/flame/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flame
  namespace: default
  labels:
    app.kubernetes.io/name: flame
    app.kubernetes.io/instance: flame
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: flame
      app.kubernetes.io/instance: flame
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flame
        app.kubernetes.io/instance: flame
    spec:
      serviceAccountName: flame
      securityContext:
        {}
      containers:
        - name: flame
          securityContext:
            {}
          image: "pawelmalak/flame:2.1.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5005
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: flame-data
