cluster/apps/default/flame/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flame
  namespace: default
  labels:
    app.kubernetes.io/name: flame
    app.kubernetes.io/instance: flame
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: flame
    app.kubernetes.io/instance: flame
