cluster/apps/default/flame/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flame
  namespace: default
  labels:
    app.kubernetes.io/name: flame
    app.kubernetes.io/instance: flame
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "flame.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-tls"
  rules:
    - host: "flame.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flame
                port:
                  number: 80
